# uw

./: Jupyter with venv On Windows.docx  setup.ipynb  setup_uw.ipynb
IMT573/ISLP/: .all-contributorsrc  .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  ISLP.toml  MANIFEST.in  README.md  cythexts.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  setup_helpers.py
IMT573/ISLP/.github/workflows/: build_docs.yml  build_notebook.yml  build_notebook_errors.yml  build_save_labs.yml  build_test.yml
IMT573/ISLP/ISLP/: __init__.py  _version.py  cluster.py  pygam.py  survival.py  svm.py  transforms.py
IMT573/ISLP/ISLP/bart/: __init__.py  bart.py  likelihood.py  particle_tree.py  tree.py
IMT573/ISLP/ISLP/data/: Auto.csv  Auto.data  Bikeshare.csv  Carseats.csv  College.csv  Credit.csv  Fund.csv  Khan_xtest.csv  Khan_xtrain.csv  Khan_ytest.csv  Khan_ytrain.csv  NCI60labs.csv  OJ.csv  Portfolio.csv  Publication.csv  Smarket.csv  Wage.csv  Weekly.csv
IMT573/ISLP/ISLP/models/: __init__.py  columns.py  generic_selector.py  model_spec.py  sklearn_wrap.py  strategy.py
IMT573/ISLP/ISLP/torch/: __init__.py  imdb.py  lightning.py
IMT573/ISLP/docs/: .gitignore  Makefile  README.rst  fix_and_clear_notebooks.py  make_notebooks.py  requirements.txt
IMT573/ISLP/docs/jupyterbook/: imdb.ipynb  imdb.md
IMT573/ISLP/docs/jupyterbook/datasets/: Auto.ipynb  Auto.md  Bikeshare.ipynb  Bikeshare.md  Boston.ipynb  Boston.md  BrainCancer.ipynb  BrainCancer.md  Caravan.ipynb  Caravan.md  Carseats.ipynb  Carseats.md  College.ipynb  College.md  Credit.ipynb  Credit.md  Default.ipynb  Default.md  Fund.ipynb  Fund.md  Hitters.ipynb  Hitters.md  Khan.ipynb  Khan.md  NCI60.ipynb  NCI60.md  NYSE.ipynb  NYSE.md  OJ.ipynb  OJ.md  Portfolio.ipynb  Portfolio.md  Publication.ipynb  Publication.md  Smarket.ipynb  Smarket.md  (+6 more)
IMT573/ISLP/docs/source/: conf.py  data.rst  docs_version.json  helpers.rst  imdb.ipynb  index.rst  installation.myst  labs.myst  models.rst  transforms.rst
IMT573/ISLP/tests/: test_datasets.py
IMT573/ISLP/tests/bart/: test_bart.py
IMT573/ISLP/tests/deeplearning/: test_hitters.py  test_mnist.py
IMT573/ISLP/tests/models/: test_boolean_columns.py  test_columns.py  test_model_matrix.py  test_selection.py
(+164 files in other folders)
